--- a/templates/main.ipynb
+++ b/templates/main.ipynb
@@ -4,6 +4,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# AIPI 590 - XAI | Assignment #03\n",
+    "### Churn Prediction with Interpretability \n",
+    "### Akhil Chintalapati\n",
+    "\n",
+    "[![Open In Collab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/drive/1zR-MpNQiSzehvNgvy2aiAouFbaQ0i_t2?usp=sharing)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Connects to any needed files from GitHub and Google Drive\n",
+    "import os\n",
+    "\n",
+    "# Remove Colab default sample_data\n",
+    "!rm -r ./sample_data\n",
+    "\n",
+    "# Clone GitHub files to colab workspace\n",
+    "repo_name = \"ChurnPredictor\" # Change to your repo name\n",
+    "git_path = 'https://github.com/AkhilByteWrangler/ChurnPredictor.git' #Change to your path\n",
+    "!git clone \"{git_path}\"\n",
+    "\n",
+    "# Change working directory to location of notebook\n",
+    "notebook_dir = 'templates'\n",
+    "path_to_notebook = os.path.join(repo_name,notebook_dir)\n",
+    "%cd \"{path_to_notebook}\"\n",
+    "%ls"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Step 0 : Importing the Required Libraries and Loading the Data"
    ]
   },
